--- a/main.html
+++ b/main.html
@@ -9,15 +9,30 @@
 <body>	
 	<script>
 		function secondHighest(arr) {
-			//Write your code here
-			
+			let n=arr.length;
+			let secondlargest=-Infinity;
+			let largest=-Infinity;
+			for(let i=0;i<n;i++)
+				{
+					if(arr[i]>largest)
+					{
+						secondlargest=largest;
+						largest=arr[i];
+					}else if(arr[i]>secondlargest)
+					{
+						secondlargest=arr[i];
+					}
+				}
+			return secondlargest;
+
+
 		}
 
 		function Main() {
 			var n = prompt("Enter the number of elements");
 			var arr = [];
 			for (var i = 0; i < n; i++) {
-				arr[i] = prompt("Enter element " + (i+1));
+				arr[i] = parseInt(prompt("Enter element " + (i+1)));
 			}
 			alert(secondHighest(arr));
 		}
